# python-project-framework

./: pyproject.toml
app/: calculator.py  config.py  main.py
